--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin:5px;
-    padding:5px;
+    padding:10px;
     align-items: center;
 }
 body{
@@ -18,8 +18,6 @@ body{
 header{
     position: relative;
     top:5px;
-    
-    
 }
 .logo{
     margin-left: auto;
@@ -69,16 +67,23 @@ nav a:hover {
 #slider img.selected{
     opacity:1;
 }
-
-.promo-foto{
-    width:300px;
-    height:350px;
-    margin-left:150px;
-    margin-right: 60px;
+#vitrine{
+    display:flex;
+    width:auto;
+    flex-direction: column;
+}
+.vitrine_collum{
+    align-items: center;
+    display:flex;
+    flex-direction:row;
+}
+.vitrine-foto{
+    width:250px;
+    height:300px;
+    margin-left:15px;
+    margin-right:25px;
     margin-top: 5px;
     margin-bottom: 5px;
-    display:flexbox;
-    align-items: center;
     border-radius: 15%;
 }
 #banner-promocao{
@@ -111,3 +116,14 @@ align-items: center;
     flex-direction: row;
     justify-content:space-around;
 }
+/* MEDIA QUERY PARA TIPOS DIFERENTES DE TELAS - REPONSIVIDADE
+        @media screen (max-width:700px) {
+        body {
+            background-color:blue;
+            display:flex;
+        }
+        
+    }
+
+    */
+    
