--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
 *{
     margin:5px;
-    padding:10px;
+   /* padding:10px; */
     align-items: center;
-}
-.loader{
-    position: fixed;
-    background-color: aliceblue;
-
 }
 body{
     font-family: arial, helvetica, sans-serif;
@@ -51,39 +46,48 @@ nav a:hover {
     background-color: #D6D6D6;
     border-bottom: 3px solid #EA0000;
   }
-.div-banner{
-    background-color: #858585;
-    height:650px;
+
+  #banner-rotativo{
+    width: auto;
+    height:500px;
+    z-index: 998;
+    background-color:#8f69a5;
+  }
+
+  #slider{
+    width: auto;
+    height: 450px;
+  }
+  #slider .selected{
+   width: 1850px;
+   height:490px;
 }
 
-.titulo{
-    display: flex;
-    justify-content: center; /* centraliza o texto horizontalmente */
-    align-items: center; /* centraliza as linhas verticalmente */
-    margin: 30px 0; /* 30px -> margens superior e inferior */
- }
- 
- .titulo::before,
- .titulo::after{
-    content: '';
-    position: relative;
-    height: 1px; /* espessura das linhas */
-    background: #666; /* cor das linhas */
-    min-width: 50px; /* largura mínima das linhas */
-    flex-grow: 1; /* distribui a largura das linhas por igual */
- }
- 
- .titulo span{
-    color: #666; /* cor do texto */
-    padding: 0 15px; /* distancia do texto às linhas */
-    font-weight: bold; /* negrito */
-    font-size: 2em; /* tamanho do texto */
- }
+#slider img{
+    opacity: 0;
+    position:absolute;
+    width:100%;
+    height: 100%;
+    object-fit:cover;
+}
 
+#slider img.selected{
+    opacity:1;
+}
 #vitrine{
     display:flex;
     width:auto;
     flex-direction: column;
+}
+
+.novidade{
+    display:block;
+    position:relative;
+    text-align: center;
+    margin: 0 auto 24px;
+    padding: 0 16px;
+    z-index: 0;
+    
 }
 .vitrine_collum{
     align-items: center;
@@ -113,13 +117,13 @@ nav a:hover {
     margin-bottom: 15px;
 }
 #about{
-margin-left: auto;
-margin-right: auto;
-align-items: flex-start;
-justify-content:center;
-display:flex;
-flex-direction: column;
-align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: flex-start;
+    justify-content:center;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -142,7 +146,7 @@ align-items: center;
     font-size:16px;
 }
 .contato{
-margin-top: 112px;
+    margin-top: 112px;
 }
 
 .modal-container{
@@ -203,6 +207,32 @@ margin-top: 112px;
     box-shadow:0 4px 4px 0 rgba(0,0,0,.3);
     font-size: 1.2em;
 }
+/* Linhas que indicam qual seção é */
+.titulo{
+    display: flex;
+    justify-content: center; /* centraliza o texto horizontalmente */
+    align-items: center; /* centraliza as linhas verticalmente */
+    margin: 30px 0; /* 30px -> margens superior e inferior */
+ }
+ 
+ .titulo::before,
+ .titulo::after{
+    content: '';
+    position: relative;
+    height: 1px; /* espessura das linhas */
+    background: #666; /* cor das linhas */
+    min-width: 50px; /* largura mínima das linhas */
+    flex-grow: 1; /* distribui a largura das linhas por igual */
+ }
+ 
+ .titulo span{
+    color: #666; /* cor do texto */
+    padding: 0 15px; /* distancia do texto às linhas */
+    font-weight: bold; /* negrito */
+    font-size: 2em; /* tamanho do texto */
+ }
+
+
 /* MEDIA QUERY PARA TIPOS DIFERENTES DE TELAS - REPONSIVIDADE
         @media screen (max-width:700px) {
         body {
@@ -212,3 +242,4 @@ margin-top: 112px;
         
     }
     */
+    
